--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <title></title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
@@ -46,7 +46,7 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="{{ url_for('rules') }}">Rules</a>
           </li>
-          </li>
+
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('review') }}">Review</a>
           </li>
